starrs/seerr/resources/seerr-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: seerr
  name: seerr
spec:
  ports:
    - name: "seerr-5055"
      port: 5055
      protocol: TCP
      targetPort: 5055
  selector:
    app: seerr
